--- a/templates/producao.html
+++ b/templates/producao.html
@@ -41,8 +41,18 @@
                         <input name='data_antiga_producao' style='height: 35px;' id="date" type="date" required><input name='hora_antiga' style='margin-left: 20px; height: 35px;' id="date" type="time" required><br><br>
                         <p>Final: </p>
                         <input name='data_nova_producao' style='height: 35px;' id="date" type="date" required><input name='hora_nova' style='margin-left: 20px; height: 35px;' id="date" type="time" required>
+                        <p style='margin-top: 20px;' >Máquinas: </p>
+                        {% if maquinas %}
+                        {% for maquina in maquinas %}
+                        <div class="form-check form-check-primary">
+                          <label class="form-check-label">
+                            <input type="checkbox" class="form-check-input" checked=""> {{ maquina.nome_maquina }} <i class="input-helper"></i></label>
                         </div>
+                        {% endfor %}
+                        {% endif %}
+                      </div>
                     </div>
+                    
                     <div class="dropdown-divider"></div>
                     <div style='height: 62px;' >
                         <div style='width: 100%;' class="preview-item-content">
@@ -117,7 +127,7 @@
             </div>
             <div class="row">
                 {% if maquinas %}
-                {% for maquina in maquinas %}
+                {% for maquina in maquinas_filtradas %}
                 <div class="col-xl-3 col-sm-6 grid-margin stretch-card">
                   <div class="card">
                     <div class="card-body">
