Subindo alterações realizadas

--- a/templates/producao.html
+++ b/templates/producao.html
@@ -157,6 +157,8 @@
                               <td style='text-align: center;'> {{producao_maquina4}} </td>
                               {% elif maquina.id == 5 %}
                               <td style='text-align: center;'> {{producao_maquina5}} </td>
+                              {% elif maquina.id == 6 %}
+                              <td style='text-align: center;'> {{producao_maquina6}} </td>
                               {% endif %}
                               <td style='text-align: center;'> Montagem </td>
                               <td style='text-align: center;'> {{data_antiga}} </td>
