Subindo alterações de PDF

--- a/templates/relatorios.html
+++ b/templates/relatorios.html
@@ -163,7 +163,7 @@
                     
 
                     <div class="col-md-12">
-                      <button onclick={% url 'index' %} style='float: right;' class="btn btn-success" ><i class="mdi mdi-download btn-icon-append"></i>Baixar relatório</button>
+                      <button style='float: right;' class="btn btn-success" ><i class="mdi mdi-download btn-icon-append"></i>Baixar relatório</button>
                       <button style='float: right; margin-right: 15px;' type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
                     </div>
                     </div>
