--- a/templates/index.html
+++ b/templates/index.html
@@ -20,17 +20,17 @@
           <ul class="navbar-nav w-100">
             <li class="nav-item w-100">
               <form class="nav-link mt-2 mt-md-0 d-none d-lg-flex search">
-                <input type="text" class="form-control" placeholder="Pesquisar máquinas">
+                <p style='color: #6c729385;' class="mb-0">Atualizado {{ultima_atualizacao}}</p>
               </form>
             </li>
           </ul>
           
           <ul class="navbar-nav navbar-nav-right">
-            <a type="button" class="btn btn-outline-warning btn-icon-text" onclick="Refresh()">Atualizar</a>
+            <a type="button" class="btn btn-success btn-icon-text d-none d-lg-flex" onclick="Refresh()">Atualizar</a>
 
-            <a style="width: 120px; margin-left: 20px;" type="button" class="btn btn-outline-warning btn-icon-text" href={% url 'index' %}>Limpar filtros</a>
+            <a style="width: 120px; margin-left: 20px;" type="button" class="btn btn-success btn-icon-text d-none d-lg-flex" href={% url 'index' %}>Limpar filtros</a>
 
-            <li class="nav-item dropdown d-none d-lg-block">
+            <li class="nav-item dropdown d-lg-block">
               <a class="nav-link btn btn-success create-new-button" id="createbuttonDropdown" data-toggle="dropdown" aria-expanded="false" href="#">Filtrar dados</a>
               <div style='width: 300px;' class="dropdown-menu dropdown-menu-right navbar-dropdown preview-list" aria-labelledby="createbuttonDropdown">
                 <h6 class="p-3 mb-0">Filtros</h6>
@@ -84,35 +84,36 @@
                   <div class='col-xl-3 col-sm-6 grid-margin stretch-card'>
                     <h4 style='margin-top: 8px;' class="card-title">{{maquina.nome_maquina}}</h4>
                     <div style='padding-left: 0px;' class="col-3">
-                      <a type="button" class='nav-link' data-toggle="modal" data-target="#exampleModal" data-whatever="{{maquina.nome_maquina}}">
+                      <a class='nav-link d-none d-lg-flex' data-toggle="modal" data-target="#exampleModal" data-whatever="{{maquina.nome_maquina}}">
                         <i class="mdi mdi-border-color"></i>
                       </a>
                     </div>
                   </div>
                     <canvas id="{{maquina.id}}" class="transaction-chart"></canvas>
                     <div class="bg-gray-dark d-flex d-md-block d-xl-flex flex-row py-3 px-4 px-md-3 px-xl-4 rounded mt-3">
-                      <div class="text-md-center text-xl-left">
-                        <h6 class="mb-1">Peças produzidas</h6>
-                        <p style='color: #6c729385;' class="mb-0">Atualizado {{ultima_atualizacao}}</p>
-                      </div>
-                      <div class="align-self-center flex-grow text-right text-md-center text-xl-right py-md-2 py-xl-0">
+                      <div style='width: 100%;' class="text-md-center text-xl-left">
+                        <h6 style ='width: 100%; text-align: center;' class="mb-1">Peças produzidas</h6>
+
                         <!-- INÍCIO DA PRODUÇÃO DAS MÁQUINAS -->
                         {% if maquina.id == 1 %}
-                        <h6 class="font-weight-bold mb-0">{{producao_maquina1}}</h6>
+                        <p style='color: #d5d5d585; width: 100%; text-align: center; margin-top: 15px;' class="mb-0">{{producao_maquina1}}</p>
+                        {% elif maquina.id == 2 %}
+                        <p style='color: #d5d5d585; width: 100%; text-align: center; margin-top: 15px;' class="mb-0">{{producao_maquina2}}</p>
                         {% elif maquina.id == 3 %}
-                        <h6 class="font-weight-bold mb-0">{{producao_maquina3}}</h6>
+                        <p style='color: #d5d5d585; width: 100%; text-align: center; margin-top: 15px;' class="mb-0">{{producao_maquina3}}</p>
                         {% elif maquina.id == 4 %}
-                        <h6 class="font-weight-bold mb-0">{{producao_maquina4}}</h6>
+                        <p style='color: #d5d5d585; width: 100%; text-align: center; margin-top: 15px;' class="mb-0">{{producao_maquina4}}</p>
                         {% elif maquina.id == 5 %}
-                        <h6 class="font-weight-bold mb-0">{{producao_maquina5}}</h6>
+                        <p style='color: #d5d5d585; width: 100%; text-align: center; margin-top: 15px;' class="mb-0">{{producao_maquina5}}</p>
                         {% elif maquina.id == 6 %}
-                        <h6 class="font-weight-bold mb-0">{{producao_maquina6}}</h6>
-                        {% elif maquina.id == 7 %}
-                        <h6 class="font-weight-bold mb-0">{{producao_maquina7}}</h6>
+                        <p style='color: #d5d5d585; width: 100%; text-align: center; margin-top: 15px;' class="mb-0">{{producao_maquina6}}</p>
       
                         <!-- @PMINDEX1# -->
                         <!-- {elif maquina.id == id da máquina nova} -->
                         <!--<h6 class="font-weight-bold mb-0">{{producao_maquina8}}</h6> -->
+                      </div>
+                      <div class="align-self-center flex-grow text-right text-md-center text-xl-right py-md-2 py-xl-0">
+                        
 
                         {% endif %}
                       </div>
@@ -127,7 +128,7 @@
                         </div>
                         {% endif %}
                   </div>
-                  <a style='background-color: #12151e; border: none; color: #646b8f; ' type="button" class="btn btn-primary btn-fw" href={% url 'maquina' maquina.id %}>Abrir</a>
+                  <a style='background-color: #12151e; border: none; color: #646b8f; ' class="btn btn-primary btn-fw" href={% url 'maquina' maquina.id %}>Abrir</a>
                 </div>
                 
               </div>
