--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@
           <ul class="navbar-nav w-100">
             <li class="nav-item w-100">
               <form class="nav-link mt-2 mt-md-0 d-none d-lg-flex search">
-                <p style='color: #6c729385;' class="mb-0">Atualizado {{ultima_atualizacao}}</p>
+                <p style='color: #6c729385;' class="mb-0">Atualizado em {{ultima_atualizacao}}</p>
               </form>
             </li>
           </ul>
