Subindo demais alterações

--- a/templates/geral.html
+++ b/templates/geral.html
@@ -21,7 +21,7 @@
             <ul class="navbar-nav w-100">
                 <li class="nav-item w-100">
                 <form class="nav-link mt-2 mt-md-0 d-none d-lg-flex search">
-                  <h6 class="text-muted font-weight-normal">Atualizado em {{ultima_atualizacao}}</h6>
+                  <p style='color: #6c729385;' class="mb-0">Atualizado em {{ultima_atualizacao}}</p>
                 </form>
                 </li>
             </ul>
