--- a/templates/suporte.html
+++ b/templates/suporte.html
@@ -26,7 +26,7 @@
             </ul>
             
             <ul class="navbar-nav navbar-nav-right">
-                <a type="button" class="btn btn-outline-warning btn-icon-text" onclick="Refresh()">Atualizar</a>
+                <a type="button" class="btn btn-success btn-icon-text" onclick="Refresh()">Atualizar</a>
             
             </ul>
             <button class="navbar-toggler navbar-toggler-right d-lg-none align-self-center" type="button" data-toggle="offcanvas">
@@ -38,13 +38,7 @@
           <div class="content-wrapper">
             <div class="page-header">
               <h3 class="page-title">Suporte</h3>
-              <nav aria-label="breadcrumb">
-                <ol class="breadcrumb">
-                  <li class="breadcrumb-item"><a href="#">Charts</a></li>
-                  <li class="breadcrumb-item active" aria-current="page">Chart-js</li>
-                </ol>
-                </div>
-            </nav>
+            </div>
 
         <div class="row">
             <div class="col-sm-6">
